--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <script src="js/main.js"></script>
 
     <title>Lightshot Random</title>
@@ -16,6 +16,7 @@
 <body>
     <div class="container">
             <div class="button" onclick="randomImage();">GET</div>
+            <div class="button" onclick="randomTenImages();">GET 10</div>
             <div class="lightshot">
                 <img src="" id="image">
             </div>
