--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,9 @@
 <body>
     <div class="container">
             <div class="button" onclick="randomImage();">GET</div>
-            <div class="button" onclick="randomTenImages();">GET 10</div>
-            <div class="lightshot">
+            <!-- <div class="lightshot">
                 <img src="" id="image">
-            </div>
+            </div> -->
     </div>
 </body>
 </html>
